--- a/StickyOnPage/res/layout/selection.xml
+++ b/StickyOnPage/res/layout/selection.xml
@@ -21,7 +21,7 @@
     android:layout_height="fill_parent"
     android:gravity="center_horizontal|center_vertical"
     android:orientation="vertical"
-    android:background="#FFE400" >
+    android:background="@drawable/selection_bg" >
 
     <TextView
         android:layout_width="wrap_content"
