--- a/StickyOnPage/res/layout/selection.xml
+++ b/StickyOnPage/res/layout/selection.xml
@@ -32,6 +32,17 @@
         android:textColor="#000000"
         android:textSize="28sp"
         android:typeface="sans" />
+    
+    <TextView
+        android:id="@+id/user_name"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="center"
+        android:gravity="center"
+        android:textColor="#000000"
+        android:textSize="20sp"
+        android:text="Hello there"
+        android:typeface="sans" />
 
     <TextView
         android:id="@+id/selection_string"
