--- a/StickyOnPage/res/layout/activity_main.xml
+++ b/StickyOnPage/res/layout/activity_main.xml
@@ -1,19 +1,49 @@
-<LinearLayout
-        xmlns:android="http://schemas.android.com/apk/res/android"
-        android:orientation="vertical"
-        android:layout_width="fill_parent"
-        android:layout_height="fill_parent">
+<android.support.v4.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    android:id="@+id/drawer_layout"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent" >
 
-    <fragment android:name="com.inha.stickyonpage.SelectionFragment"
-              android:id="@+id/selectionFragment"
-              android:layout_width="match_parent"
-              android:layout_height="match_parent" />
-    <fragment android:name="com.inha.stickyonpage.SplashFragment"
-              android:id="@+id/splashFragment"
-              android:layout_width="match_parent"
-              android:layout_height="match_parent" />
-    <fragment android:name="com.facebook.widget.UserSettingsFragment"
-              android:id="@+id/userSettingsFragment"
-              android:layout_width="match_parent"
-              android:layout_height="match_parent" />
-</LinearLayout>
+    <FrameLayout android:id="@+id/drawer_main"
+	    		android:layout_width="match_parent"
+    			android:layout_height="match_parent"
+    			android:baselineAligned="false">
+
+        <TextView
+            android:id="@+id/loginStatus"
+            android:text="TextView"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content" />
+        
+    </FrameLayout>
+    
+    <LinearLayout
+        android:id="@+id/drawer_left"
+        android:layout_height="match_parent" 
+        android:layout_width="320dp"
+        android:orientation="vertical"
+        android:layout_gravity="start"
+        android:background="#464646"
+        android:choiceMode="singleChoice"
+        android:divider="@android:color/transparent"
+        android:dividerHeight="0dp"
+        android:gravity="top"
+        android:padding="0dp"
+        android:scrollbars="none">
+	</LinearLayout>
+
+    <LinearLayout
+        android:id="@+id/drawer_right"
+        android:layout_height="match_parent"
+        android:layout_width="320dp"
+        android:orientation="vertical"
+        android:layout_gravity="end"
+        android:background="#464646"
+        android:choiceMode="singleChoice"
+        android:divider="@android:color/transparent"
+        android:dividerHeight="0dp"
+        android:gravity="top"
+        android:padding="0dp"
+        android:scrollbars="none">
+	</LinearLayout>
+
+</android.support.v4.widget.DrawerLayout>
