--- a/StickyOnPage/res/layout/activity_main.xml
+++ b/StickyOnPage/res/layout/activity_main.xml
@@ -7,19 +7,27 @@
 	    		android:layout_width="match_parent"
     			android:layout_height="match_parent"
     			android:baselineAligned="false">
-
-        <TextView
-            android:id="@+id/loginStatus"
-            android:text="TextView"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content" />
-        
     </FrameLayout>
     
-    <LinearLayout
+	<com.inha.stickyonpage.MemoLinearLayout
         android:id="@+id/drawer_left"
         android:layout_height="match_parent" 
         android:layout_width="320dp"
+        android:orientation="vertical"
+        android:layout_gravity="start"
+        android:choiceMode="singleChoice"
+        android:divider="@android:color/transparent"
+        android:dividerHeight="0dp"
+        android:gravity="top"
+        android:padding="0dp"
+        android:scrollbars="none">
+	</com.inha.stickyonpage.MemoLinearLayout>
+
+    <!-- <TextView
+        android:id="@+id/drawer_tv"
+        android:text="TextView"
+        android:layout_height="wrap_content"
+        android:layout_width="150dp"
         android:orientation="vertical"
         android:layout_gravity="start"
         android:background="#464646"
@@ -28,9 +36,8 @@
         android:dividerHeight="0dp"
         android:gravity="top"
         android:padding="0dp"
-        android:scrollbars="none">
-	</LinearLayout>
-
+        android:scrollbars="none" /> -->
+    
     <LinearLayout
         android:id="@+id/drawer_right"
         android:layout_height="match_parent"
