--- a/StickyOnPage/res/layout/splash.xml
+++ b/StickyOnPage/res/layout/splash.xml
@@ -7,7 +7,7 @@
     android:orientation="vertical" >
 
     <TextView
-        android:id="@+id/textView1"
+        android:id="@+id/memo"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignParentTop="true"
