--- a/StickyOnPage/res/layout/login.xml
+++ b/StickyOnPage/res/layout/login.xml
@@ -53,7 +53,7 @@
         android:layout_marginBottom="10dp"
         android:layout_marginTop="10dp" />
 
-    <com.inha.stickyonpage.TwitterLoginButton
+    <com.inha.stickyonpage.LoginTwitterButton
         android:id="@+id/login_button_twitter"
         android:layout_width="210dp"
         android:layout_height="wrap_content"
