Modifications 1. Recent sticky fragment 2. Webview 3. And other small things

--- a/StickyOnPage/res/layout/memo.xml
+++ b/StickyOnPage/res/layout/memo.xml
@@ -3,6 +3,5 @@
     android:id="@+id/memo"
     android:layout_width="match_parent"
     android:layout_height="180dp"
-    android:background="#C3FFB8"
+	android:background="#f9f74a"
     android:padding="10dp" />
-
