--- a/StickyOnPage/res/layout/splash.xml
+++ b/StickyOnPage/res/layout/splash.xml
@@ -3,9 +3,9 @@
     android:id="@+id/RelativeLayout1"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/twitter_blue"
+    android:background="@drawable/sop_splash"
     android:orientation="vertical" >
-
+<!--
     <TextView
         android:id="@+id/memo"
         android:layout_width="wrap_content"
@@ -15,5 +15,5 @@
         android:layout_marginTop="142dp"
         android:text="Sticky On Page"
         android:textSize="30sp" />
-
+-->
 </RelativeLayout>
