--- a/StickyOnPage/res/layout/stickyview.xml
+++ b/StickyOnPage/res/layout/stickyview.xml
@@ -1,6 +1,57 @@
 <?xml version="1.0" encoding="utf-8"?>
-<com.inha.stickyonpage.RecentStickyTextView
-    xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="wrap_content"
+<com.inha.stickyonpage.RecentStickyLinearLayout
+    xmlns:android="http://schemas.android.com/apk/res/android" 
+    android:id="@+id/entire_sticky"
+    android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:gravity="center_horizontal" />
+    android:orientation="vertical" >
+    
+    <LinearLayout
+        android:id="@+id/sticky_right"
+	    android:layout_width="wrap_content"
+	    android:layout_height="wrap_content"
+	    android:orientation="vertical" >
+        
+	    <LinearLayout
+	        android:id="@+id/id_layout"
+	    	android:layout_width="match_parent"
+	    	android:layout_height="wrap_content"
+	    	android:orientation="horizontal" >
+		    <TextView
+		        android:id="@+id/id_textview"
+		        android:layout_width="wrap_content"
+		        android:layout_height="wrap_content"
+		        android:textStyle="bold"
+		        android:paddingLeft="@dimen/recentsticky_padding_left" />
+		    <TextView
+		        android:layout_width="wrap_content"
+		        android:layout_height="wrap_content"
+		        android:textStyle="italic"
+		        android:text="@string/recent_sticky_str1" />
+	    </LinearLayout>
+	    
+	    <TextView
+	        android:id="@+id/memo_textview"
+	        android:layout_width="wrap_content"
+	        android:layout_height="wrap_content"
+	        android:paddingLeft="@dimen/recentsticky_padding_left" />
+	    
+	    <LinearLayout
+	        android:id="@+id/url_layout"
+	    	android:layout_width="match_parent"
+	    	android:layout_height="wrap_content"
+	    	android:orientation="horizontal" >
+		    <TextView
+		        android:layout_width="wrap_content"
+		        android:layout_height="wrap_content"
+		        android:textStyle="italic"
+		        android:text="@string/recent_sticky_str2"
+		        android:paddingLeft="@dimen/recentsticky_padding_left" />
+		    <TextView
+		        android:id="@+id/url_textview"
+		        android:layout_width="wrap_content"
+		        android:layout_height="wrap_content" />
+		    
+	    </LinearLayout>
+    </LinearLayout>
+</com.inha.stickyonpage.RecentStickyLinearLayout>
