--- a/StickyOnPage/res/layout/webview.xml
+++ b/StickyOnPage/res/layout/webview.xml
@@ -4,6 +4,26 @@
     android:layout_height="match_parent"
     android:orientation="vertical" >
 
+    <LinearLayout 
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal" >
+        
+        <EditText
+            android:id="@+id/browser_url"
+         	android:layout_weight="7"
+         	android:layout_width="0dip"
+            android:layout_height="wrap_content"
+            android:hint="@string/browser_hint"
+            android:inputType="textUri" />
+        
+        <Button
+            android:id="@+id/browser_button"
+            android:layout_width="40dp"
+            android:layout_height="40dp"
+            android:background="@drawable/browser_go"/>
+        
+    </LinearLayout>
     <WebView
         android:id="@+id/webView1"
         android:layout_width="match_parent"
