--- a/StickyOnPage/res/layout/memo_write.xml
+++ b/StickyOnPage/res/layout/memo_write.xml
@@ -13,6 +13,7 @@
         android:layout_height="wrap_content"
         android:layout_weight="1"
         android:background="#F3FFB8"
+        android:textColor="@android:color/black"
         android:ems="10"
         android:gravity="center_vertical|top"
         android:padding="30dp" >
