--- a/StickyOnPage/res/layout/stickyview.xml
+++ b/StickyOnPage/res/layout/stickyview.xml
@@ -14,7 +14,7 @@
         
 	    <LinearLayout
 	        android:id="@+id/id_layout"
-	    	android:layout_width="match_parent"
+	    	android:layout_width="wrap_content"
 	    	android:layout_height="wrap_content"
 	    	android:orientation="horizontal" >
 		    <TextView
@@ -38,7 +38,7 @@
 	    
 	    <LinearLayout
 	        android:id="@+id/url_layout"
-	    	android:layout_width="match_parent"
+	    	android:layout_width="wrap_content"
 	    	android:layout_height="wrap_content"
 	    	android:orientation="horizontal" >
 		    <TextView
