--- a/StickyOnPage/res/layout/webview.xml
+++ b/StickyOnPage/res/layout/webview.xml
@@ -7,8 +7,10 @@
     <LinearLayout 
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:layout_marginTop="5dp"
+        android:layout_marginBottom="4dp"
         android:orientation="horizontal" >
-        
+
         <EditText
             android:id="@+id/browser_url"
          	android:layout_weight="7"
@@ -16,14 +18,15 @@
             android:layout_height="wrap_content"
             android:hint="@string/browser_hint"
             android:inputType="textUri" />
-        
+
         <Button
             android:id="@+id/browser_button"
-            android:layout_width="40dp"
-            android:layout_height="40dp"
-            android:background="@drawable/browser_go"/>
-        
+            android:layout_width="35dp"
+            android:layout_height="35dp"
+            android:background="@drawable/ic_action_search" />
+
     </LinearLayout>
+    
     <WebView
         android:id="@+id/webView1"
         android:layout_width="match_parent"
