--- a/StickyOnPage/res/layout/activity_main.xml
+++ b/StickyOnPage/res/layout/activity_main.xml
@@ -22,35 +22,20 @@
         android:padding="0dp"
         android:scrollbars="none">
 	</com.inha.stickyonpage.MemoLinearLayout>
-
-    <!-- <TextView
-        android:id="@+id/drawer_tv"
-        android:text="TextView"
-        android:layout_height="wrap_content"
-        android:layout_width="150dp"
-        android:orientation="vertical"
-        android:layout_gravity="start"
-        android:background="#464646"
-        android:choiceMode="singleChoice"
-        android:divider="@android:color/transparent"
-        android:dividerHeight="0dp"
-        android:gravity="top"
-        android:padding="0dp"
-        android:scrollbars="none" /> -->
     
-    <LinearLayout
+	<com.inha.stickyonpage.UrlLinearLayout
         android:id="@+id/drawer_right"
         android:layout_height="match_parent"
         android:layout_width="320dp"
         android:orientation="vertical"
         android:layout_gravity="end"
-        android:background="#464646"
         android:choiceMode="singleChoice"
         android:divider="@android:color/transparent"
         android:dividerHeight="0dp"
+        android:background="#FDFDFD"
         android:gravity="top"
         android:padding="0dp"
         android:scrollbars="none">
-	</LinearLayout>
+	</com.inha.stickyonpage.UrlLinearLayout>
 
 </android.support.v4.widget.DrawerLayout>
