RecentStickyFragment changes 1. Add action view to action bar 2. Connect action view and BrowsingWebView    (action view -> enter URL to go -> browsing gets started) 3. Change sticky list layout

--- a/StickyOnPage/res/layout/stickyview.xml
+++ b/StickyOnPage/res/layout/stickyview.xml
@@ -32,8 +32,9 @@
 	    
 	    <TextView
 	        android:id="@+id/memo_textview"
-	        android:layout_width="wrap_content"
+	        android:layout_width="330dp"
 	        android:layout_height="wrap_content"
+	        android:maxLines="1"
 	        android:paddingLeft="@dimen/recentsticky_padding_left" />
 	    
 	    <LinearLayout
@@ -49,8 +50,9 @@
 		        android:paddingLeft="@dimen/recentsticky_padding_left" />
 		    <TextView
 		        android:id="@+id/url_textview"
-		        android:layout_width="wrap_content"
-		        android:layout_height="wrap_content" />
+		        android:layout_width="330dp"
+		        android:layout_height="wrap_content"
+		        android:maxLines="1" />
 		    
 	    </LinearLayout>
     </LinearLayout>
