--- a/StickyOnPage/res/layout/memo_write.xml
+++ b/StickyOnPage/res/layout/memo_write.xml
@@ -4,9 +4,9 @@
     android:layout_height="match_parent"
     android:minHeight="400dp"
     android:minWidth="300dp"
-    android:background="#00ffffff"
+    android:background="#dddddd"
     android:orientation="vertical" >
-
+<!-- android:background="#00ffffff" -->
     <EditText
         android:id="@+id/editText1"
         android:layout_width="match_parent"
@@ -24,8 +24,7 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content" 
-        android:background="#00ffffff"
-        >
+        android:background="#dddddd" >
 
         <Button
             android:id="@+id/cancleBtn"
