--- a/StickyOnPage/res/menu/recentsticky_menu.xml
+++ b/StickyOnPage/res/menu/recentsticky_menu.xml
@@ -1,9 +1,17 @@
 <?xml version="1.0" encoding="utf-8"?>
 <menu xmlns:android="http://schemas.android.com/apk/res/android" >
+    
+    <item android:id="@+id/recent_search"
+        android:icon="@drawable/ic_action_web_site"
+        android:showAsAction="ifRoom|collapseActionView"
+        android:title="@string/recent_search_str"
+        android:actionLayout="@layout/recentsticky_action_view" />
+    <!--
     <item android:id="@+id/recent_search"
         android:icon="@drawable/ic_action_search"
         android:showAsAction="ifRoom"
         android:title="@string/recent_search_str" />
+    -->
     <item android:id="@+id/recent_overflow"
         android:icon="@drawable/ic_action_overflow"
         android:showAsAction="ifRoom"
