--- a/StickyOnPage/res/layout/recentsticky.xml
+++ b/StickyOnPage/res/layout/recentsticky.xml
@@ -1,25 +1,61 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="fill_parent"
-    android:layout_height="fill_parent"
+<com.inha.stickyonpage.RecentStickyLinearLayout
+    xmlns:android="http://schemas.android.com/apk/res/android" 
+    android:id="@+id/entire_sticky"
+    android:layout_width="match_parent"
+    android:layout_height="wrap_content"
     android:orientation="vertical" >
-    	
-	<ScrollView
-	    android:id="@+id/scroll_view"
-	    android:layout_width="match_parent"
-	    android:layout_height="match_parent"
-	    android:paddingTop="15dp"
-	    android:fillViewport="true"
-	    android:background="@android:color/white" >
+    
+    <LinearLayout
+        android:id="@+id/sticky_right"
+	    android:layout_width="wrap_content"
+	    android:layout_height="wrap_content"
+	    android:orientation="vertical" >
+        
+	    <LinearLayout
+	        android:id="@+id/id_layout"
+	    	android:layout_width="wrap_content"
+	    	android:layout_height="wrap_content"
+	    	android:orientation="horizontal" >
+		    <TextView
+		        android:id="@+id/id_textview"
+		        android:layout_width="wrap_content"
+		        android:layout_height="wrap_content"
+		        android:textStyle="bold"
+		        android:paddingLeft="@dimen/recentsticky_padding_left" />
+		    <TextView
+		        android:layout_width="wrap_content"
+		        android:layout_height="wrap_content"
+		        android:textStyle="italic"
+		        android:text="@string/recent_sticky_str1" />
+	    </LinearLayout>
 	    
-	    <ListView 
-	        android:id="@+id/list_view"
-	        android:layout_width="match_parent"
+	    <TextView
+	        android:id="@+id/memo_textview"
+	        android:layout_width="330dp"
 	        android:layout_height="wrap_content"
-	        android:divider="#FFFFFF"
-	        android:dividerHeight="3dp"
-	        android:layout_gravity="center_horizontal|center_vertical" />
-   
-	</ScrollView>
-</LinearLayout>
+	        android:ellipsize="end"
+	        android:maxLines="1"
+	        android:paddingLeft="@dimen/recentsticky_padding_left" />
+	    
+	    <LinearLayout
+	        android:id="@+id/url_layout"
+	    	android:layout_width="wrap_content"
+	    	android:layout_height="wrap_content"
+	    	android:orientation="horizontal" >
+		    <TextView
+		        android:layout_width="wrap_content"
+		        android:layout_height="wrap_content"
+		        android:textStyle="italic"
+		        android:text="@string/recent_sticky_str2"
+		        android:paddingLeft="@dimen/recentsticky_padding_left" />
+		    <TextView
+		        android:id="@+id/url_textview"
+		        android:layout_width="220dp"
+		        android:layout_height="wrap_content"
+		        android:ellipsize="end"
+		        android:maxLines="1" />
+		    
+	    </LinearLayout>
+    </LinearLayout>
+</com.inha.stickyonpage.RecentStickyLinearLayout>
