--- a/StickyOnPage/res/layout/url_listview_item.xml
+++ b/StickyOnPage/res/layout/url_listview_item.xml
@@ -24,6 +24,8 @@
         android:paddingLeft="5dp"
         android:textAppearance="?android:attr/textAppearanceMedium"
         android:textColor="#666"
-        android:textSize="15sp" />
+        android:textSize="15sp"
+        android:maxLines="1"
+        android:ellipsize="end" />
 
 </LinearLayout>
