--- a/StickyOnPage/res/layout/recentsticky_list.xml
+++ b/StickyOnPage/res/layout/recentsticky_list.xml
@@ -3,15 +3,24 @@
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="fill_parent"
     android:layout_height="fill_parent"
-    android:orientation="vertical" >
-    	
-	<ScrollView
+    android:orientation="vertical"
+    android:background="@android:color/white" >
+    
+    <TextView
+        android:id="@+id/scroll_text"
+        android:layout_width="wrap_content"
+	    android:layout_height="wrap_content"
+	    android:text="@string/scroll_no_friends"
+	    android:layout_gravity="center_horizontal"
+	    android:layout_marginTop="10dp"
+	    android:visibility="invisible" />
+
+    	<ScrollView
 	    android:id="@+id/scroll_view"
 	    android:layout_width="match_parent"
 	    android:layout_height="match_parent"
 	    android:paddingTop="15dp"
-	    android:fillViewport="true"
-	    android:background="@android:color/white" >
+	    android:fillViewport="true" >
 	    
 	    <ListView 
 	        android:id="@+id/list_view"
