--- a/StickyOnPage/res/layout/memo_write.xml
+++ b/StickyOnPage/res/layout/memo_write.xml
@@ -1,34 +1,37 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    android:id="@+id/memo_write_linear"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="#dddddd"
     android:minHeight="400dp"
     android:minWidth="300dp"
-    android:background="#dddddd"
     android:orientation="vertical" >
-<!-- android:background="#00ffffff" -->
+
+    <!-- android:background="#00ffffff" -->
+
     <EditText
         android:id="@+id/editText1"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="0dp"
         android:layout_weight="1"
-        android:background="#F3FFB8"
-        android:textColor="@android:color/black"
+        android:background="#FFFFBF"
         android:ems="10"
         android:gravity="center_vertical|top"
-        android:padding="30dp" >
+        android:padding="30dp"
+        android:textColor="@android:color/black" >
 
         <requestFocus />
     </EditText>
 
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content" 
+        android:layout_height="wrap_content"
         android:background="#dddddd" >
 
         <Button
             android:id="@+id/cancleBtn"
-            android:layout_width="wrap_content"
+            android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_weight="1"
             android:gravity="center"
@@ -36,11 +39,10 @@
 
         <Button
             android:id="@+id/saveBtn"
-            android:layout_width="wrap_content"
+            android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_weight="1"
             android:text="Save" />
-
     </LinearLayout>
 
 </LinearLayout>
