--- a/StickyOnPage/res/layout/webview.xml
+++ b/StickyOnPage/res/layout/webview.xml
@@ -10,6 +10,14 @@
         android:layout_marginTop="5dp"
         android:layout_marginBottom="4dp"
         android:orientation="horizontal" >
+        
+        <TextView
+            android:id="@+id/browser_sticky_count"
+            android:layout_width="30dp"
+            android:layout_height="30dp"
+            android:background="@drawable/ic_sop"
+            android:layout_marginLeft="5dp"
+            android:gravity="center_vertical|center_horizontal" />
 
         <EditText
             android:id="@+id/browser_url"
