--- a/StickyOnPage/res/layout/login.xml
+++ b/StickyOnPage/res/layout/login.xml
@@ -28,7 +28,7 @@
         android:layout_height="wrap_content"
         android:layout_gravity="center"
         android:gravity="center"
-        android:text="@string/app_name"
+        android:text="@string/login_app_name"
         android:textColor="#000000"
         android:textSize="28sp"
         android:typeface="sans" />
@@ -41,7 +41,7 @@
         android:layout_marginTop="35dp"
         android:gravity="center_horizontal"
         android:lines="2"
-        android:text="@string/get_started"
+        android:text="@string/login_get_started"
         android:textColor="#666666"
         android:textSize="17sp" />
 
@@ -59,6 +59,6 @@
         android:layout_height="wrap_content"
         android:layout_gravity="center_horizontal"
         android:layout_marginBottom="10dp"
-        android:text="@string/twitterLogin" />
+        android:text="@string/login_twitterLogin" />
         
 </LinearLayout>
