--- a/StickyOnPage/res/layout/selection.xml
+++ b/StickyOnPage/res/layout/selection.xml
@@ -52,7 +52,7 @@
         android:layout_marginTop="35dp"
         android:gravity="center_horizontal"
         android:lines="2"
-        android:text="@string/welcome"
+        android:text="@string/login_welcome"
         android:textColor="#666666"
         android:textSize="17sp" />
 
