--- a/StickyOnPage/res/layout/recentsticky_list.xml
+++ b/StickyOnPage/res/layout/recentsticky_list.xml
@@ -15,20 +15,35 @@
 	    android:layout_marginTop="10dp"
 	    android:visibility="invisible" />
 
-    	<ScrollView
+    <ScrollView
 	    android:id="@+id/scroll_view"
 	    android:layout_width="match_parent"
 	    android:layout_height="match_parent"
 	    android:paddingTop="15dp"
 	    android:fillViewport="true" >
 	    
-	    <ListView 
-	        android:id="@+id/list_view"
-	        android:layout_width="match_parent"
-	        android:layout_height="wrap_content"
-	        android:divider="#FFFFFF"
-	        android:dividerHeight="3dp"
-	        android:layout_gravity="center_horizontal|center_vertical" />
-   
-	</ScrollView>
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="vertical">
+            
+		    <ListView 
+		        android:id="@+id/list_view"
+		        android:layout_width="match_parent"
+		        android:layout_height="wrap_content"
+		        android:divider="#FFFFFF"
+		        android:dividerHeight="3dp"
+		        android:layout_gravity="center_horizontal|center_vertical" />
+		    
+		    <TextView
+		        android:id="@+id/scroll_statistics"
+		        android:layout_width="wrap_content"
+		        android:layout_height="wrap_content"
+		        android:layout_gravity="center_horizontal"
+		        android:layout_marginTop="10dp"
+		        android:textStyle="italic"
+		        android:textSize="20sp" />
+	    
+	    </LinearLayout>
+	</ScrollView>    
 </LinearLayout>
