--- a/StickyOnPage/res/layout/webview.xml
+++ b/StickyOnPage/res/layout/webview.xml
@@ -19,20 +19,41 @@
             android:layout_marginLeft="5dp"
             android:gravity="center_vertical|center_horizontal" />
 
-        <EditText
-            android:id="@+id/browser_url"
-         	android:layout_weight="7"
-         	android:layout_width="0dip"
+        <LinearLayout
+            android:layout_width="0dip"
             android:layout_height="wrap_content"
-            android:hint="@string/browser_hint"
-            android:inputType="textUri" />
-
+            android:layout_weight="8"
+            android:orientation="horizontal"
+            android:layout_gravity="center_vertical"
+            android:layout_marginLeft="5dp"
+            android:layout_marginRight="5dp"
+            android:background="#FFFFFF" >
+            
+	        <EditText
+	            android:id="@+id/browser_url"
+	         	android:layout_width="0dip"
+	            android:layout_height="35dp"
+	            android:layout_weight="7"
+	            android:layout_marginLeft="5dp"
+	            android:hint="@string/browser_hint"
+	            android:inputType="textUri"
+	            android:imeOptions="actionDone"
+	            android:background="@null" />
+            
+	        <Button
+	            android:id="@+id/browser_cancel"
+	            android:layout_width="25dp"
+	            android:layout_height="25dp"
+	            android:background="@drawable/ic_action_cancel"
+	            android:visibility="invisible" />
+		</LinearLayout>
+	    
         <Button
-            android:id="@+id/browser_button"
-            android:layout_width="35dp"
-            android:layout_height="35dp"
-            android:background="@drawable/ic_action_search" />
-
+	        android:id="@+id/browser_button"
+	        android:layout_width="35dp"
+	        android:layout_height="35dp"
+	        android:background="@drawable/ic_action_search" />
+	        
     </LinearLayout>
     
     <WebView
